# online-book-store

./: .dockerignore  .gitignore  Dockerfile  README.md  book-data.csv  demo-dockerfile.mysql  deploy_script.sh  docker-compose.yml  mysql.cnf  pyproject.toml  requirements.txt  requrements.txt
.github/workflows/: ci-cd.yml
src/: book-data.csv  db.sqlite3  manage.py  openapi-schema.yml
src/books/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
src/books/management/commands/: import_csv_data.py
src/books/migrations/: 0001_initial.py  0002_order_payment_method_comment.py  0002_rename_books_book.py  0002_shippingaddress_is_default.py  0003_alter_comment_active.py  0003_orderhistory.py  0003_rename_category_book_genre.py  0004_alter_customerrating_unique_together.py  0004_book_description_alter_book_price_and_more.py  0004_book_slug.py  0005_book_average_rating.py  0005_genre_alter_book_genre.py  0006_cart_user_alter_order_customer_and_more.py  0006_genre_slug.py  0007_alter_book_options.py  0008_alter_cart_user.py
src/books/templates/: base.html  book-detail.html  category.html  index.html  messages.html
src/books/templates/shopping/: add-address.html  cart.html  checkout.html  order-history.html  place-order.html
src/books/templatetags/: custom_filters.py
src/bookstore/: serializers.py  urls.py  views.py
src/bookstore/templates/: api_page.html
src/members/: forms.py  urls.py  views.py
src/members/templates/registration/: login.html  (+7 more)
src/storyKeeper/: asgi.py  settings.py  urls.py  wsgi.py
src/userData/: serializers.py  urls.py  views.py
